# acp-web-client

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md
frontend/: Dockerfile  README.md  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.build.json
frontend/example/: README.md  globals.css  package-lock.json  package.json  tsconfig.json
frontend/example/app/: globals.css  page.tsx
frontend/example/components/: ConnectionStatus.tsx  ErrorBoundary.tsx
frontend/example/components/chat/: InputArea.tsx  MessageItem.tsx  MessageList.tsx
frontend/example/components/permission/: PermissionModal.tsx
frontend/example/components/provider/: ProviderSelector.tsx
frontend/example/components/session/: SessionPanel.tsx
frontend/example/contexts/: SessionContext.tsx  WebSocketContext.tsx
frontend/example/types/: acp.ts
frontend/example/utils/: helpers.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConnectionStatus.tsx  ErrorBoundary.tsx  GlobalErrorDisplay.tsx
frontend/src/contexts/: PermissionContext.tsx  SessionContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: index.ts  useACP.ts  useACPPermission.ts  useACPSession.ts  useACPWebSocket.ts
frontend/src/types/: acp.ts
frontend/src/utils/: helpers.ts  markdown.ts
server/: README.md  pyproject.toml
server/acp_server/: __init__.py  acp_client.py  mock_provider.py  websocket_server.py
(+10 files in other folders)
